# fast-succinct-trie

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  gen_workload.py  workload.cpp  workload_email.cpp
benchmark/include/: allocatortracker.h  index.hpp  microbench.h
benchmark/workload_spec/: workloadc  workloade
fst-serialized/: CMakeLists.txt
fst-serialized/include/: FST.hpp
fst-serialized/src/: CMakeLists.txt  FST.cpp
fst-serialized/test/: CMakeLists.txt  TestFST.cpp
fst/include/: FST.hpp  bitmap-rank.h  bitmap-rankF.h  bitmap-select.h  common.h  popcount.h
fst/src/: CMakeLists.txt  FST.cpp  bitmap-rank.cc  bitmap-rankF.cc  bitmap-select.cc
fst/test/: TestFST.cpp
